@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -53,6 +53,7 @@ class SpanImpl extends AbstractSpanImpl {
     }
 
     @Nonnull
+    @Deprecated
     @Override
     public Span addTag(String key, String value) {
         doAddTag(key, value);
@@ -60,6 +61,7 @@ class SpanImpl extends AbstractSpanImpl {
     }
 
     @Nonnull
+    @Deprecated
     @Override
     public Span addLabel(String key, String value) {
         doAddStringLabel(key, value);
@@ -67,6 +69,7 @@ class SpanImpl extends AbstractSpanImpl {
     }
 
     @Nonnull
+    @Deprecated
     @Override
     public Span addLabel(String key, Number value) {
         doAddNumberLabel(key, value);
@@ -74,8 +77,30 @@ class SpanImpl extends AbstractSpanImpl {
     }
 
     @Nonnull
+    @Deprecated
     @Override
     public Span addLabel(String key, boolean value) {
+        doAddBooleanLabel(key, value);
+        return this;
+    }
+
+    @Nonnull
+    @Override
+    public Span setLabel(String key, String value) {
+        doAddStringLabel(key, value);
+        return this;
+    }
+
+    @Nonnull
+    @Override
+    public Span setLabel(String key, Number value) {
+        doAddNumberLabel(key, value);
+        return this;
+    }
+
+    @Nonnull
+    @Override
+    public Span setLabel(String key, boolean value) {
         doAddBooleanLabel(key, value);
         return this;
     }
