@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -72,17 +72,56 @@ public interface Transaction extends Span {
     @Deprecated
     Transaction addTag(String key, String value);
 
+    /**
+     * {@inheritDoc}
+     *
+     * @deprecated use {@link #setLabel(String, String)} instead
+     */
     @Nonnull
+    @Deprecated
     @Override
     Transaction addLabel(String key, String value);
 
+    /**
+     * {@inheritDoc}
+     *
+     * @deprecated use {@link #setLabel(String, Number)} instead
+     */
     @Nonnull
+    @Deprecated
     @Override
     Transaction addLabel(String key, Number value);
 
+    /**
+     * {@inheritDoc}
+     *
+     * @deprecated use {@link #setLabel(String, boolean)} instead
+     */
     @Nonnull
+    @Deprecated
     @Override
     Transaction addLabel(String key, boolean value);
+
+    /**
+     * {@inheritDoc}
+     */
+    @Nonnull
+    @Override
+    Transaction setLabel(String key, String value);
+
+    /**
+     * {@inheritDoc}
+     */
+    @Nonnull
+    @Override
+    Transaction setLabel(String key, Number value);
+
+    /**
+     * {@inheritDoc}
+     */
+    @Nonnull
+    @Override
+    Transaction setLabel(String key, boolean value);
 
     /**
      * Custom context is used to add non-indexed,
