@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -55,6 +55,7 @@ class TransactionImpl extends AbstractSpanImpl implements Transaction {
     }
 
     @Nonnull
+    @Deprecated
     @Override
     public Transaction addTag(String key, String value) {
         doAddTag(key, value);
@@ -62,6 +63,7 @@ class TransactionImpl extends AbstractSpanImpl implements Transaction {
     }
 
     @Nonnull
+    @Deprecated
     @Override
     public Transaction addLabel(String key, String value) {
         doAddStringLabel(key, value);
@@ -69,6 +71,7 @@ class TransactionImpl extends AbstractSpanImpl implements Transaction {
     }
 
     @Nonnull
+    @Deprecated
     @Override
     public Transaction addLabel(String key, Number value) {
         doAddNumberLabel(key, value);
@@ -76,8 +79,30 @@ class TransactionImpl extends AbstractSpanImpl implements Transaction {
     }
 
     @Nonnull
+    @Deprecated
     @Override
     public Transaction addLabel(String key, boolean value) {
+        doAddBooleanLabel(key, value);
+        return this;
+    }
+
+    @Nonnull
+    @Override
+    public Transaction setLabel(String key, String value) {
+        doAddStringLabel(key, value);
+        return this;
+    }
+
+    @Nonnull
+    @Override
+    public Transaction setLabel(String key, Number value) {
+        doAddNumberLabel(key, value);
+        return this;
+    }
+
+    @Nonnull
+    @Override
+    public Transaction setLabel(String key, boolean value) {
         doAddBooleanLabel(key, value);
         return this;
     }
